<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="essence_settings_title" translatable="false">Welcome to Essence</string>
    <string name="essence_settings_subtitle">How are you today?</string>
    <string name="extensions_title" translatable="false">Essence</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="enable">Enable</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="system_category">Team</string>
    <string name="themes_category">Themes</string>
    <string name="qs_category">QS</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="hardware_category">Extras</string>
    <string name="build_tweaks_summary_title">Strive for Amelioration</string>
    <string name="listview">ListView</string>
    <string name="rom_name" translatable="false">Project Elixir</string>
    <string name="rom_summ" translatable="false" >Project Elixir is another aftermarket AOSP ROM which basically offers minimal UI enhancement and close to Stock Android ROM experience with great performance, security, customisation and stability. In short, its perfectly balanced between great Performance, Security, Stability, Minimal UI, Customisation and awesome features including pixel goodies </string>
    <string name="dev_support">Developers and Team</string>
    <string name="aboutus_tab">Know more about us</string>
    <string name="dev1" translatable="false">Saurav</string>
    <string name="dev1_summary" translatable="false">Founder, Lead Developer</string>
    <string name="dev2" translatable="false">Nishant</string>
    <string name="dev2_summary" translatable="false">Co-lead Developer, Team</string>
    <string name="note">Important NOTE</string>
    <string name="note_summary">Dont Direct Message any devs, groups are there for some reason and use some brain. If we see any direct message we will ban him or her from everywhere. We arent here to serve you 24*7 so just keep patience. Just let us live our life peacefully</string>
    <string name="download">Download your Builds</string>
    <string name="download_summary">Tap here to download builds for your respective devices</string>
    <string name="paypal">Paypal</string>
    <string name="donate_summary">Donate us to appreciate our work</string>
    <string name="don_summ1">• As a matter of fact that in order to build a Custom ROM there are certain pre-requisite such as a High-End Building Server (Jenkins) or PC having very High-End technical specification combined with a very High-Speed internet connection.</string>
    <string name="don_summ2">• We developers need to allot our time and hard work from our Academics hefty schedule in the proper maintenance of the custom ROM so that we can provide users with timely and stable updates</string>
    <string name="don_summ3">• Do consider donating or buying me a coffee on Paypal or join us on Patreon for sustainable support and rewards if you want to appreciate our work</string>
    <string name="tele_group">Telegram Discussion Group</string>
    <string name="grp_summary">If you have any issues, do share in our telegram discussion group</string>
    <string name="tele_channel">Telegram Update Channel</string>
    <string name="update_summary">Subscribe us on telegram channel for faster updates</string>
    <string name="website">Our Official WebSite</string>
    <string name="website_summary">Do visit our website, You will get all necessary info here</string>
    <string name="download_donate">Download and Website</string>
    <string name="telegram">Telegram Support</string>
    <string name="donateus">Support Us by Donating</string>
    <string name="patreon">Want Early Build access ?</string>
    <string name="patreon_summary">Patreon is for those who wants to support devs, get early build access, some exclusive features and benefits.</string>
    <string name="summ_gesture">Playback Control • System Navigation</string>
    <string name="summ_lock">DT2S • Media Art • Edge Lighting</string>
    <string name="summ_misc">Game Space • Power Menu • HwKey </string>
    <string name="summ_monet">Monet • Theming • Lockscreen Clock</string>
    <string name="summ_quick">QS Styles • Media Artwork • Data Usage</string>
    <string name="summ_sbar">Network Traffic • VoLTE/VoWifi </string>
    <string name="summ_about">Project Elixir and Devs</string>
    <string name="donate">Donate us here</string>
    <string name="gestures_title">Gestures</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="navbar_title">Navigation bar</string>
    <string name="notifications_title">Notifications</string>
    <string name="powermenu_title">Power menu</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="recents_title">Recents apps</string>
    <string name="statusbar_title">Status bar</string>
    <string name="volume_title">Volume Settings</string>
    <string name="network_traffic_catagories">Network Traffic</string>
    <string name="clock_date">Clock and Date Settings</string>
    <string name="status_bar_actions">Status Bar Actions</string>
    <string name="lockscreen_settings">LockScreen Settings</string>
    <string name="customisation_title">Themes</string>
    <string name="buttons_category">Power Menu</string>
    <string name="lockscreen_gestures_category">LockScreen Gesture</string>
    <string name="signal_category">Network Icon</string>
    <string name="misc_gnrl_category">General Options</string>
    <string name="pwrbtn_category">Power Button Options</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="general_category">General Customisations</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint" translatable="false">#FFDDDDDD</string>
    <string name="hex_check_button_text">PREVIEW</string>
    <string name="hex_reset_button_text">RESET</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="color_right_arrow" translatable="false">"→"</string>
    <string name="color_down_arrow" translatable="false">"↓"</string>
    <string name="longpress_info">Longpress box to save color</string>
    <string name="lockscreen_media_category">Lockscreen Music</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="lockscreen_albumart_filter_title">Media cover art filter</string>
    <string name="lockscreen_albumart_filter_none">None</string>
    <string name="lockscreen_albumart_filter_grayscale">Grayscale</string>
    <string name="lockscreen_albumart_filter_tint">Accent tinted</string>
    <string name="lockscreen_albumart_filter_blur">Blur</string>
    <string name="lockscreen_albumart_filter_grayblur">Grayscale and blurred</string>
    <string name="lockscreen_albumart_filter_blur_radius_title">Blur amount for lockscreen media artwork</string>
    <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader in power menu</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="traffic_summary">Customize the traffic indicators</string>
    <string name="network_traffic_state_title">Show network traffic</string>
    <string name="network_traffic_autohide_threshold_title">Auto-hide threshold</string>
    <string name="ignore_window_secure_title">Ignore window secure flags</string>
    <string name="ignore_window_secure_summary">This removes the screenshots and screenrecords limits for all applications. Normally, special applications are replaced with black areas in records. This can be convenient in some cases but may lead to privacy leaks. After changing this toggle, you may need to restart applications for the change to take effect.</string>
    <string name="enable_fingerprint_ripple_effect_title">Ripple effect</string>
    <string name="enable_fingerprint_ripple_effect_summary">Show ripple effect on unlock with fingerprint</string>
    <string name="qs_footer_category">QS Footer</string>
    <string name="qs_footer_datausage_title">Data usage</string>
    <string name="qs_footer_datausage_summary">Display data usage summary in quick settings footer</string>
    <string name="default_string">Default</string>
    <string name="screen_off_animation_title">Screen off animation</string>
    <string name="screen_off_animation_crt">CRT</string>
    <string name="screen_off_animation_scale">Scale</string>
    <string name="lockscreen_effects_cat">Lockscreen Animations</string>
    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep</string>
    <string name="fingerprint_category">Fingerprint Options</string>
    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate on error fingerprint authentication</string>
    <string name="fprint_success_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_success_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="status_bar_clock_font_style_title">Clock font style</string>
    <string name="status_bar_clock_color_title">Clock font color</string>
    <string name="unit_pixels" translatable="false">dp</string>
    <string name="unit_seconds">seconds</string>
    <string name="status_bar_clock_title">Clocks</string>
    <string name="status_bar_clock_seconds_title">Clock seconds</string>
    <string name="status_bar_clock_seconds_summary">Display seconds next to clock in status bar</string>
    <string name="status_bar_clock_auto_hide_title">Auto hide</string>
    <string name="status_bar_clock_auto_hide_launcher_summary">Hide clock if launcher is visible</string>
    <string name="status_bar_clock_auto_hide_summary">Hide clock at regular interval</string>
    <string name="status_bar_clock_auto_hide_hdur_title">Hide duration</string>
    <string name="status_bar_clock_auto_hide_hdur_summary">Number of seconds to hide clock</string>
    <string name="status_bar_clock_auto_hide_sdur_title">Show duration</string>
    <string name="status_bar_clock_auto_hide_sdur_summary">Number of seconds to wait before hiding clock</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_date_title">Date</string>
    <string name="status_bar_date_format_title">Date format</string>
    <string name="status_bar_date_style">Date style</string>
    <string name="clock_date_position">Date position</string>
    <string name="clock_font_size_title">Clock font size</string>
</resources>