<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title=" ">

    <!-- Header -->
    <PreferenceCategory
        android:title="Lock Screen"
        android:layout="@layout/custom_preference_category_essence">
    </PreferenceCategory>

        <org.elixir.essence.preferences.SystemSettingSwitchPreference
            android:key="double_tap_sleep_lockscreen"
            android:title="@string/double_tap_sleep_lockscreen_title"
            android:defaultValue="false" />

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
        android:title="@string/lockscreen_media_category">

        <org.elixir.essence.preferences.SecureSettingSwitchPreference
            android:key="lockscreen_media_metadata"
            android:title="@string/media_art_title"
            android:summary="@string/media_art_summary"
            android:defaultValue="true" />

        <org.elixir.essence.preferences.SystemSettingListPreference
            android:key="lockscreen_albumart_filter"
            android:title="@string/lockscreen_albumart_filter_title"
            android:entries="@array/lockscreen_albumart_filter_entries"
            android:entryValues="@array/lockscreen_albumart_filter_values"
            android:dependency="lockscreen_media_metadata"
            android:defaultValue="0" />

        <org.elixir.essence.preferences.SystemSettingSeekBarPreference
            android:key="ls_media_filter_blur_radius"
            android:title="@string/lockscreen_albumart_filter_blur_radius_title"
            android:defaultValue="10"
            android:max="25"
            settings:min="1" />

    </PreferenceCategory>

    <PreferenceCategory
            android:layout="@layout/custom_preference_category"
            android:title="@string/lockscreen_effects_cat">.

    <org.elixir.essence.preferences.SystemSettingListPreference
            android:key="screen_off_animation"
            settings:layout="@layout/xd_pref_card_top"
        android:title="@string/screen_off_animation_title"
        android:entries="@array/screen_off_animation_entries"
        android:entryValues="@array/screen_off_animation_values"
        android:summary="%s"
        android:defaultValue="0" />

    </PreferenceCategory>


    <PreferenceCategory
        android:key="lockscreen_ui_finterprint_category"
        android:title="@string/fingerprint_category">

        <SwitchPreference
            android:key="fingerprint_success_vib"
            android:title="@string/fprint_success_vib_title"
            android:summary="@string/fprint_success_vib_summary"
            android:persistent="true" />

        <SwitchPreference
            android:key="fingerprint_error_vib"
            android:title="@string/fprint_error_vib_title"
            android:summary="@string/fprint_error_vib_summary"
            android:persistent="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="ripple_effect_category"
        android:title="@string/enable_fingerprint_ripple_effect_title">.

        <org.elixir.essence.preferences.SystemSettingSwitchPreference
            android:key="enable_ripple_effect"
            android:icon="@drawable/ic_unlock_outline"
            android:title="@string/enable_fingerprint_ripple_effect_title"
            android:summary="@string/enable_fingerprint_ripple_effect_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <org.elixir.essence.preferences.SystemSettingSwitchPreference
        android:key="lockscreen_battery_info"
        android:title="@string/lockscreen_battery_info_title"
        android:summary="@string/lockscreen_battery_info_summary"
        android:defaultValue="true" />

</PreferenceScreen>

