<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2019-2022 The CherishOS Projects
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title=" ">

    <!-- Header -->
    <PreferenceCategory
        android:title="@string/status_bar_clock_title"
        android:layout="@layout/custom_preference_category_essence">
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
	   android:title="Clock Options">
     
    <org.elixir.essence.preferences.SystemSettingSwitchPreference
        android:key="status_bar_clock_auto_hide_launcher"
        settings:layout="@layout/xd_pref_card_top"
        android:title="@string/status_bar_clock_auto_hide_title"
        android:summary="@string/status_bar_clock_auto_hide_launcher_summary"
        android:defaultValue="false" />

    <org.elixir.essence.preferences.SystemSettingSwitchPreference
        android:key="status_bar_clock_seconds"
        settings:layout="@layout/xd_pref_card_mid"
        android:title="@string/status_bar_clock_seconds_title"
        android:summary="@string/status_bar_clock_seconds_summary"
        android:defaultValue="false" />

    <org.elixir.essence.preferences.SystemSettingListPreference
        android:key="status_bar_am_pm"
        settings:layout="@layout/essence_pref_card_mid"
        android:title="@string/status_bar_am_pm_title"
        android:summary="%s"
        android:dialogTitle="@string/status_bar_am_pm_title"
        android:entries="@array/status_bar_am_pm_entries"
        android:entryValues="@array/status_bar_am_pm_values"
        android:defaultValue="2" />

    <org.elixir.essence.preferences.SystemSettingSeekBarPreference
        android:key="status_bar_clock_size"
        android:title="@string/clock_font_size_title"
        app:layout_pos="2"
        android:max="20"
        settings:min="4"
        settings:interval="1"
        android:defaultValue="14"
        settings:units="@string/unit_pixels" />
	    
     <org.elixir.essence.preferences.SystemSettingListPreference
        android:key="status_bar_clock_font_style"
        settings:layout="@layout/essence_pref_card_bot"
        android:dialogTitle="@string/status_bar_clock_font_style_title"
        android:title="@string/status_bar_clock_font_style_title"
        android:entries="@array/function_fonts_entries"
        android:entryValues="@array/function_fonts_values"
        android:summary="%s"
        android:defaultValue="0" />

    <org.elixir.essence.preferences.colorpicker.SystemSettingColorPickerPreference
        android:key="status_bar_clock_color"
        android:title="@string/status_bar_clock_color_title"
        android:defaultValue="0xffffffff" />
	    
    </PreferenceCategory>
     
    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
	    android:title="Clock Duration">
     
    <org.elixir.essence.preferences.SystemSettingSwitchPreference
        android:key="status_bar_clock_auto_hide"
        settings:layout="@layout/xd_pref_card_top"
        android:title="@string/status_bar_clock_auto_hide_title"
        android:summary="@string/status_bar_clock_auto_hide_summary"
        android:defaultValue="false" />

    <org.elixir.essence.preferences.SystemSettingSeekBarPreference
        android:key="status_bar_clock_auto_hide_hduration"
        app:layout_pos="2"
        android:title="@string/status_bar_clock_auto_hide_hdur_title"
        android:summary="@string/status_bar_clock_auto_hide_hdur_summary"
        android:max="300"
        settings:min="5"
        settings:interval="5"
        android:dependency="status_bar_clock_auto_hide"
        android:defaultValue="60"
        settings:units="@string/unit_seconds" />

    <org.elixir.essence.preferences.SystemSettingSeekBarPreference
        android:key="status_bar_clock_auto_hide_sduration"
        app:layout_pos="3"
        android:title="@string/status_bar_clock_auto_hide_sdur_title"
        android:summary="@string/status_bar_clock_auto_hide_sdur_summary"
        android:max="300"
        settings:min="5"
        settings:interval="5"
        android:dependency="status_bar_clock_auto_hide"
        android:defaultValue="5"
        settings:units="@string/unit_seconds" />  
    </PreferenceCategory>
     
    <PreferenceCategory
        android:layout="@layout/custom_preference_category"
	    android:title="Date Options">
     
    <org.elixir.essence.preferences.SystemSettingListPreference
        android:key="status_bar_clock_date_display"
        android:title="@string/status_bar_date_title"
        settings:layout="@layout/essence_pref_card_top"
        android:entries="@array/status_bar_date_entries"
        android:entryValues="@array/status_bar_date_values"
        android:defaultValue="0" />

    <org.elixir.essence.preferences.SystemSettingListPreference
        android:key="status_bar_clock_date_position"
        android:title="@string/clock_date_position"
        settings:layout="@layout/essence_pref_card_mid"
        android:entries="@array/clock_date_position_entries"
        android:entryValues="@array/clock_date_position_values"
        android:defaultValue="0" />

    <org.elixir.essence.preferences.SystemSettingListPreference
        android:key="status_bar_clock_date_style"
        settings:layout="@layout/essence_pref_card_mid"
        android:title="@string/status_bar_date_style"
        android:entries="@array/status_bar_date_style_entries"
        android:entryValues="@array/status_bar_date_style_values"
        android:defaultValue="0" />

    <ListPreference
        android:key="status_bar_clock_date_format"
        settings:layout="@layout/essence_pref_card_bot"
        android:title="@string/status_bar_date_format_title"
        android:entries="@array/status_bar_date_format_entries_values"
        android:entryValues="@array/status_bar_date_format_entries_values" />
</PreferenceCategory>

</PreferenceScreen>
