<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project
  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title=" ">

    <!-- Header -->
    <PreferenceCategory
        android:title="Support Us"
        android:layout="@layout/custom_preference_category_essence">
    </PreferenceCategory>

    <Preference
	android:title=""
	android:textStyle="bold"
        android:textSize="20dp"
	android:summary="@string/don_summ1">
    </Preference>

    <Preference
        android:title=""
        android:textStyle="bold"
        android:textSize="20dp"
        android:summary="@string/don_summ2">
    </Preference>

    <Preference
        android:title=""
        android:textStyle="bold"
        android:textSize="20dp"
        android:summary="@string/don_summ3">
    </Preference>

    <Preference
	android:title="@string/paypal"
	settings:layout="@layout/xd_pref_card_top"
	android:summary="Do consider donating or buying me a coffee on Paypal if you want to appreciate our work">
    <intent
        android:action="android.intent.action.VIEW"
        android:data="https://www.paypal.me/uglykid24" />
    </Preference>

    <Preference
        android:title="UPI"
        settings:layout="@layout/xd_pref_card_mid"
        android:summary="Unified Payments Interface is for the Indian users who wants to support devs">
    <intent
        android:action="android.intent.action.VIEW"
        android:data="https://projectelixiros.com/donate" />
    </Preference>

    <Preference
        android:title="@string/patreon"
        settings:layout="@layout/xd_pref_card_bot"
        android:summary="@string/patreon_summary">
    <intent
        android:action="android.intent.action.VIEW"
        android:data="https://www.patreon.com/join/uglykid24" />
    </Preference>

</PreferenceScreen>
